--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "angular-cli-ghpages": "^1.0.5",
     "ngx-owl-carousel-o": "^7.0.4",
     "rxjs": "~7.5.0",
+    "socket.io-parser": "^4.2.4",
     "tslib": "^2.3.0",
+    "webpack": "^5.88.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
